Fixed text overflow bug. Fixed Create/Edit Book Definition bug when logging in as Publisher, Publisher Plus, or Editor
git-tfs-id: [https://tfsnpt.int.thomson.com:443/tfs/Cobalt_Collection/]$/Cobalt eBook Builder/Development;C239038

--- a/ebookManager/WebContent/theme/layout.css
+++ b/ebookManager/WebContent/theme/layout.css
@@ -332,9 +332,7 @@ a:hover {
 	width:61.3em;
 }
 
-.bookDefinitionView .centerSection,
-.bookDefinitionView #displayExcludeDocument,
-.bookDefinitionView #displayRenameTocEntry {
+.bookDefinitionView .centerSection {
 	width:58em;
 }
 
@@ -602,6 +600,12 @@ a:hover {
 #displayTableViewer {
 	width:55.4em;
 	margin: 1em auto 0em auto;
+}
+
+#displayExcludeDocument .wordwrap,
+#displayRenameTocEntry .wordwrap,
+#displayTableViewer .wordwrap {
+	max-width:53.4em;
 }
 
 #displayExcludeDocument .expandingBox,
